syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "/pb";

service User {
    rpc Register(RegisterRequest) returns(RegisterResponse);
    rpc VerifyNewUser(UserCredential) returns(google.protobuf.Empty);
}

message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message RegisterResponse {
    uint32 user_id = 1;
    string created_at = 2;
}

message UserCredential {
    uint32 id = 1;
    string token = 2;
}

